fixed sidebar z-index

--- a/src/styles/admin/_sidebar.scss
+++ b/src/styles/admin/_sidebar.scss
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   width: 300px;
-  z-index: 1000;
+  z-index: 0;
   overflow-x: hidden;
   overflow-y: auto;
   background: #fff;
